<resources>
    <string name="app_name">Ticket To Ride</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="register_new_user">Register New User</string>
    <string name="host">Host</string>
    <string name="port">Port</string>
    <string name="save">Save</string>
    <string name="gameName">Game Name</string>
    <string name="createGame">Create Game</string>
    <string name="connection_settings">Change Connection</string>
    <string name="playersWaiting">Players Waiting</string>
    <string name="leave">Leave Game</string>
    <string name="startGame">Start Game</string>
    <string name="players">Players</string>
    <string name="continueText">Continue</string>
    <string name="owner">Owner</string>
    <string name="game">Game</string>
    <string name="phase2Testing">Test</string>
    <string name="back">back</string>
    <string name="addGameHistoryEntry">Add game history entry</string>
    <string name="addChatMessage">Add chat message</string>
    <string name="addClaimedRoute">Claim a route</string>
    <string name="updateCardsInDestinationCardDeck">Update cards in destination card deck</string>
    <string name="updateVisibleInvisibleCardsInTrainCardDeck">Update visible and invisible cards in train card deck</string>
    <string name="updateDestinationCardsOtherPlayers">Update destination cards for other players</string>
    <string name="updateTrainCardsOtherPlayers">Update train cards for other players</string>
    <string name="addRemoveDestinationCardsThisPlayer">Add/Remove destination cards for this player</string>
    <string name="addRemoveTrainCardsThisPlayer">Add/Remove train cards for this player</string>
    <string name="updatePlayerPoints">Update lengthValue for this player</string>
    <string name="phase2TestingTitle">Phase 2 Testing</string>
    <string name="tickettoride">Ticket to Ride</string>
    <string name="avatarEdition">Avatar Edition</string>
    <string name="destinationCards">Destination Cards</string>
    <string name="draw">Draw</string>
    <string name="drawDestinationCards">Select at least 2 destination cards</string>
    <string name="chatHistory">Messages</string>
    <string name="enterMessage">Enter a message...</string>
    <string name="lobby">Lobby</string>
    <string name="claimedRoutes">Claimed Routes</string>
    <string name="score">Score</string>
    <string name="longestRoute">Longest Route</string>
    <string name="completedDestinations">Completed Destinations</string>
    <string name="unreachedDestinations">Unreached Destinations</string>
    <string name="newGames">New Games</string>
    <string name="myGames">My Games</string>
    <string name="turn">Turn</string>
</resources>
