<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              style="@style/AvatarTextStyle"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/paper_background"
              android:gravity="center"
              android:orientation="vertical"
              android:padding="10dp"
              tools:context="byu.codemonkeys.tickettoride.views.home.ConnectionSettingsFragment">

    <byu.codemonkeys.tickettoride.views.widgets.FontifiedEditText
        android:id="@+id/connection_editTextHost"
        style="@style/AvatarTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/host"
        android:inputType="textNoSuggestions"
        android:maxLines="1"/>

    <byu.codemonkeys.tickettoride.views.widgets.FontifiedEditText
        android:id="@+id/connection_editTextPort"
        style="@style/AvatarTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/port"
        android:inputType="number"
        android:maxLines="1"/>

    <byu.codemonkeys.tickettoride.views.widgets.FontifiedButton
        android:id="@+id/connection_buttonSave"
        style="@style/AvatarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/save"
        android:textSize="@dimen/title4_size"/>

    <byu.codemonkeys.tickettoride.views.widgets.FontifiedButton
        android:id="@+id/connection_textViewCancel"
        style="@style/AvatarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/title4_size"
        android:text="@string/cancel"/>
</LinearLayout>
