<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/paper_background"
              android:gravity="center"
              android:orientation="vertical"
              android:padding="10dp"
              tools:context="byu.codemonkeys.tickettoride.views.home.CreateGameFragment">

    <byu.codemonkeys.tickettoride.views.widgets.FontifiedEditText
        android:id="@+id/createGame_editTextGameName"
        style="@style/AvatarTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/gameName"
        android:inputType="textCapWords"
        android:maxLines="1"/>

    <byu.codemonkeys.tickettoride.views.widgets.FontifiedButton
        android:id="@+id/createGame_buttonCreateGame"
        style="@style/AvatarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/createGame"
        android:textSize="@dimen/title4_size"/>

    <byu.codemonkeys.tickettoride.views.widgets.FontifiedButton
        android:id="@+id/createGame_textViewCancel"
        style="@style/AvatarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/cancel"
        android:textSize="@dimen/title4_size"/>
</LinearLayout>
