<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper_background"
                tools:context="byu.codemonkeys.tickettoride.views.game.DestinationCardsFragment">

    <byu.codemonkeys.tickettoride.views.widgets.FontifiedButton
        android:id="@+id/destinationCards_buttonBack"
        style="@style/AvatarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/destinationCards_textViewTitle"
        android:layout_alignParentLeft="true"
        android:padding="10dp"
        android:text="@string/back"
        android:textSize="@dimen/title4_size"/>

    <byu.codemonkeys.tickettoride.views.widgets.FontifiedButton
        android:id="@+id/destinationCards_buttonDraw"
        style="@style/AvatarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/destinationCards_textViewTitle"
        android:layout_alignParentRight="true"
        android:padding="10dp"
        android:text="@string/draw"
        android:textSize="@dimen/title4_size"/>

    <byu.codemonkeys.tickettoride.views.widgets.FontifiedTextView
        android:id="@+id/destinationCards_textViewTitle"
        style="@style/AvatarTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="10dp"
        android:text="@string/destinationCards"
        android:textSize="@dimen/title_size"/>

    <ImageView
        android:id="@+id/destinationCards_imageViewUnderline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/destinationCards_textViewTitle"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="-15dp"
        android:src="@drawable/ic_underline"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/destinationCards_recyclerCards"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/destinationCards_imageViewUnderline"
        android:layout_marginBottom="80dp"/>
</RelativeLayout>

