<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:background="@drawable/paper_background"
                                                 tools:context="byu.codemonkeys.tickettoride.views.home.LobbyFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/default_margin"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin">

            <byu.codemonkeys.tickettoride.views.widgets.FontifiedTextView
                style="@style/AvatarTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/game"
                android:textSize="@dimen/title2_size"/>

            <byu.codemonkeys.tickettoride.views.widgets.FontifiedTextView
                style="@style/AvatarTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:paddingStart="@dimen/lobbyOwnerOffset"
                android:text="@string/owner"
                android:textSize="@dimen/title2_size"/>
            <!--android:layout_centerHorizontal="true"-->

            <byu.codemonkeys.tickettoride.views.widgets.FontifiedTextView
                android:id="@+id/lobby_textViewPlayers"
                style="@style/AvatarTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/players"
                android:textSize="@dimen/title2_size"/>
        </RelativeLayout>

        <ImageView
            android:id="@+id/testing_imageViewUnderline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="-15dp"
            android:src="@drawable/ic_underline"/>
        <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="1dp"-->
            <!--android:background="@color/darkGray"/>-->

        <android.support.v7.widget.RecyclerView
            android:id="@+id/lobby_recyclerPendingGames"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/lobby_fabCreateGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_add_white_24dp"/>

</android.support.design.widget.CoordinatorLayout>
